--- a/sect/teaching.tex
+++ b/sect/teaching.tex
@@ -1,24 +1,26 @@
 \section*{TEACHING \&\ MENTORING}
 \subsection*{\textbf{Dartmouth College}}
 \subsubsection*{Guest Lecturer}
-\begin{tabbing} \hspace{10pt} \= \hspace{2.5cm} \=  \kill
-\> Spring 2022 \> Igneous and Metamorphic Petrology
-\end{tabbing}
+\begin{tabular}{p{.15\linewidth} p{.85\linewidth}} %p columns set fixed width and allow text wrapping
+Spring 2022 & Igneous and Metamorphic Petrology
+\end{tabular}
 
 \subsubsection*{Mentored Undergraduate Researchers}
 \begin{itemize}
+	\item Jack Duranceau (2023), thesis (\textit{in prep})
+	\item Chase Alvarado-Anderson (2023), thesis (\textit{in prep})
 	\item Cameron Stewart (2022)
 \end{itemize}
 
 \subsection*{\textbf{University of California Santa Cruz}}
 \subsubsection*{Graduate Teaching Assistant}
-\begin{tabbing} \hspace{10pt} \= \hspace{2.5cm} \=  \kill
-	\> Spring 2021 \> \textit{Measuring Earth’s 4.5 Billion-Year History} (radiogenic and stable isotope geochemistry)\\
-	\> Fall 2020 \> \textit{Evolution of Earth} (Earth history overview) \\
-	\> Fall 2019 \> \textit{Elements of Field Geology}\\
-	\> Spring 2018 \>  \textit{Geochemistry of the Solar System}\\
-	\> Winter 2018 \> \textit{Geologic Principles} (introductory Earth science)
-\end{tabbing}
+\begin{tabular}{p{.15\linewidth} p{.85\linewidth}} %p columns set fixed width and allow text wrapping
+	Spring 2021 & \textit{Measuring Earth’s 4.5 Billion-Year History} (radiogenic and stable isotope geochemistry)\\
+	Fall 2020 & \textit{Evolution of Earth} (Earth history overview) \\
+	Fall 2019 & \textit{Elements of Field Geology}\\
+	Spring 2018 & \textit{Geochemistry of the Solar System}\\
+	Winter 2018 & \textit{Geologic Principles} (introductory Earth science)
+\end{tabular}
 
 \subsubsection*{Mentored Undergraduate Researchers}
 \begin{itemize}
@@ -32,10 +34,10 @@
 
 \subsection*{\textbf{Bowdoin College} \hspace{15pt} Brunswick, ME, U.S.A. \hfill 2012 – 2013}
 \subsubsection*{Laboratory Teaching Assistant}
-\begin{tabbing} \hspace{10pt} \= \hspace{2.5cm} \=  \kill
-\> Fall 2012, 2013 \> \textit{Investigating Earth}\\
-\> Fall 2013 \> \textit{Marine Biogeochemistry}
-\end{tabbing}
+\begin{tabular}{p{.15\linewidth} p{.85\linewidth}} %p columns set fixed width and allow text wrapping
+Fall 2012, 2013 & \textit{Investigating Earth}\\
+Fall 2013 & \textit{Marine Biogeochemistry}
+\end{tabular}
 
 \subsection*{\textbf{Bozeman \& Livingston Public Schools} \hspace{15pt} MT, U.S.A. \hfill 2015}
 \textit{Substitute Teacher}
