Significant updates and some reformatting for Winter 2023

--- a/Edwards_CV.tex
+++ b/Edwards_CV.tex
@@ -39,6 +39,7 @@
 \renewcommand{\arraystretch}{1.2} % Add a little extra space between rows of tabular environments
 
 \newcommand{\ghedwards}{\textbf{G.H. Edwards}}
+\newcommand{\ongoing}{~\textrightarrow~}
 
 \setlength{\parindent}{0pt} % No indentation for all text
 
@@ -50,48 +51,59 @@
 \end{center}
 
 % ADDRESS, INFO
-Earth Sciences \\
-Dartmouth College \hfill \textit{Email:} Graham.H.Edwards@dartmouth.edu \\
-209 Fairchild Hall \hfill \textit{Phone:} 1~920~559~2279 \\
-Hanover, NH, 03755, U.S.A.	\hfill \textit{Website:} \href{https://grahamedwards.github.io}{grahamedwards.github.io}
+\textbf{Postdoctoral Fellow} \hfill \href{https://grahamedwards.github.io}{grahamedwards.github.io} \\
+Earth Sciences, Physics \& Astronomy \hfill Graham.H.Edwards{\small @dartmouth.edu} \\
+Dartmouth College \hfill +1~920~559~2279  \\
+Hanover, NH, U.S.A.	\hfill \textit{Office:}~209 Fairchild Hall
+%\begin{tabular}{@{}p{.7\textwidth} p{.3\textwidth}@{}}
+
+%\end{tabular}
 
 \vspace{1em}
 %-------------------------------------------
 
 % APPOINTMENTS
 \input{sect/appointments.tex}
+%\vspace*{2em}
 
 % EDUCATION
 \input{sect/education.tex}
+%\vspace*{2em}
 
 % PUBLICATIONS
 \input{sect/pubs.tex}
-
+%\vspace*{2em}
 
 % TEACHING
 \input{sect/teaching.tex}
+%\vspace*{2em}
 
 % OUTREACH
 \input{sect/outreach.tex}
+%\vspace*{2em}
 
 % INVITED TALKS
 \input{sect/talks.tex}
+%\vspace*{2em}
 
 % ACADEMIC SERVICES, EXPERIENCES
 \input{sect/service.tex}
+%\vspace*{2em}
 
 % FUNDING
 \input{sect/funding.tex}
+%\vspace*{2em}
 
 % AWARDS & HONORS
 \input{sect/awards.tex}
-\vspace*{2em}
+%\vspace*{2em}
 
 % CONFERENCE TALK/POSTER
 \input{sect/abstracts.tex}
+%\vspace*{2em}
 
 %-----------------------------------------------------
-\begin{center}{\rule{2.5in}{0.5pt}}\end{center}  \begin{center}\vspace{-12pt} {\rule{2.5in}{0.5pt}}\end{center}
+\begin{center}{\rule{2.5in}{0.5pt}}\end{center}  \begin{center}\vspace{-16pt} {\rule{2.5in}{0.5pt}}\end{center}
 %-----------------------------------------------------
 
 % EPILOGUE
