--- a/sect/outreach.tex
+++ b/sect/outreach.tex
@@ -1,6 +1,6 @@
 \section*{OUTREACH \& PUBLIC SERVICE}
 
-\subsection*{\textbf{Montshire Museum of Science} \hfill 2022}
+\subsection*{\textbf{Montshire Museum of Science} \hfill 2022\ongoing}
 \subsubsection*{Guest Scientist}
 \begin{itemize}
 \item Lead and assist in educational activities within the museum.
@@ -16,7 +16,7 @@
 	Link: \href{https://www.santacruzmuseum.org/category/rockin-pop-up/}{\emph{Rockin' Pop-Up} Archives}.
 \end{itemize}
 
-\subsection*{\textbf{Skype a Scientist} \hfill 2019~\textrightarrow~}
+\subsection*{\textbf{Skype a Scientist} \hfill 2019\ongoing}
 \subsubsection*{Volunteer Scientist}
 \begin{itemize}
 	\item Prepare educational content and host video calls with elementary and secondary school classrooms.
