--- a/sect/teaching.tex
+++ b/sect/teaching.tex
@@ -1,5 +1,12 @@
 \section*{TEACHING \&\ MENTORING}
 \subsection*{\textbf{Dartmouth College}}
+\subsubsection*{Research Group Leader (Nov. 2022\ongoing)}
+Acting leader of a research group (4 graduate, 2 undergraduate students) in the Department of Physics \& Astronomy while the Primary Investigator is on leave. Responsibilities include:
+\begin{itemize}
+\item Coordinate and facilitate group meetings.
+\item Provide non-specialist research guidance.
+\item Organize/present mini-workshops on research tools and skills.
+\end{itemize}
 \subsubsection*{Guest Lecturer}
 \begin{tabular}{p{.15\linewidth} p{.85\linewidth}} %p columns set fixed width and allow text wrapping
 Spring 2022 & Igneous and Metamorphic Petrology
@@ -13,7 +20,7 @@ Spring 2022 & Igneous and Metamorphic Petrology
 \end{itemize}
 
 \subsection*{\textbf{University of California Santa Cruz}}
-\subsubsection*{Graduate Teaching Assistant}
+\subsubsection*{Graduate Teaching Assistant} 
 \begin{tabular}{p{.15\linewidth} p{.85\linewidth}} %p columns set fixed width and allow text wrapping
 	Spring 2021 & \textit{Measuring Earth’s 4.5 Billion-Year History} (radiogenic and stable isotope geochemistry)\\
 	Fall 2020 & \textit{Evolution of Earth} (Earth history overview) \\
@@ -32,7 +39,7 @@ Spring 2022 & Igneous and Metamorphic Petrology
 	\item Paul Colosi (2017-2018)
 \end{itemize}
 
-\subsection*{\textbf{Bowdoin College} \hspace{15pt} Brunswick, ME, U.S.A. \hfill 2012 – 2013}
+\subsection*{\textbf{Bowdoin College} \hspace{15pt} Brunswick, ME, U.S.A.}
 \subsubsection*{Laboratory Teaching Assistant}
 \begin{tabular}{p{.15\linewidth} p{.85\linewidth}} %p columns set fixed width and allow text wrapping
 Fall 2012, 2013 & \textit{Investigating Earth}\\
