--- a/sect/appointments.tex
+++ b/sect/appointments.tex
@@ -1,5 +1,5 @@
 \section*{CURRENT APPOINTMENT}
-\subsection*{\textbf{Dartmouth College} \hfill 2021~\textrightarrow~}
+\subsection*{\textbf{Dartmouth College} \hfill 2021\ongoing}
 \textit{NSF Astronomy \&\ Astrophysics Postdoctoral Fellow}
 \begin{itemize}
 	\item[] ``Planetesimal formation, giant planet migration, and stellar accretion in our solar system and beyond"
