--- a/sect/service.tex
+++ b/sect/service.tex
@@ -18,6 +18,12 @@ Under the advisorship of lab director Prof. Terry Blackburn, I was partially res
 
 \subsection*{\textbf{Departmental Service}}
 \subsubsection*{Department of Earth Sciences, Dartmouth}
+Postdoc Representative for Faculty Search Committee \hfill 2023
+\begin{itemize}
+	\item Organized meetings with candidates and departmental postdocs.
+	\item Compiled and presented quantitative and qualitative feedback to Search Committee.
+\end{itemize}\vspace*{1ex}
+
 Earth \& Planetary History Journal Club --- Organizer 	 \hfill	Spring 2022
 \begin{itemize}
 	\item Scheduled, coordinated, and oversaw multidisciplinary reading group.
@@ -31,11 +37,15 @@ Whole Earth Seminar --- Organizer \hfill  Spring 2019
 \end{itemize}
 
 \subsection*{\textbf{Academic Meetings}}
-\subsubsection*{Meteoritical Society Annual Meeting} 
-	\par\quad McKay Award Judge (best student oral presentation) \hfill 2022
+
+\subsubsection*{American Astronomical Society}
+	\quad Chambliss Award Judge (best student poster presentation) \hfill 2023
+
+\subsubsection*{Meteoritical Society Annual Meeting}
+	\quad McKay Award Judge (best student oral presentation) \hfill 2022
 
 \subsubsection*{AGU Fall Meeting}
-	\par\quad Co-Chair/Co-Convener:~~Applications of Thermochronology to Understand Crustal Systems \hfill 2017
+	\quad Co-Chair/Co-Convener:~~Applications of Thermochronology to Understand Crustal Systems \hfill 2017
 
 \vspace{2ex}
 \begin{hangparas}{5ex}{1}
