--- a/sect/talks.tex
+++ b/sect/talks.tex
@@ -1,6 +1,8 @@
 \section*{INVITED TALKS}
 
 \begin{etaremune} [itemsep=4pt, leftmargin=3ex]
+  \item \textbf{Colby College} $|$ Geology Seminar, 17 Mar 2023.\\
+  Title:~\textit{In the light of a newborn sun: transcribing the first chapters of our solar system from meteorites}
   \item \textbf{Thayer School of Engineering, Dartmouth College} $|$ Ice+Climate Seminar Series, 10 Feb 2023. \\
   Title:~\textit{A terrestrial record of Heinrich events}
    \item \textbf{Carnegie Institution for Science} $|$
