--- a/sect/service.tex
+++ b/sect/service.tex
@@ -1,22 +1,13 @@
 \section*{ACADEMIC SERVICE \& EXPERIENCE}
 
-\subsection*{\textbf{Laboratory Research \& Management}}
-Analytical Experience:
-	\begin{itemize} [label={}]
-		\item \textit{Expert:} TIMS
-		\item \textit{Proficient:} MC-ICP-MS, ICP-MS, SEM-EDS
-		\item \textit{Limited:} ICP-OES, XRF, XRD
-	\end{itemize} \vspace{1ex}	
- \textit{W.M. Keck Isotope Facility}, UCSC \hfill 2016 -- 2021\\
-Under the advisorship of lab director Prof. Terry Blackburn, I was partially responsible for the operation and maintenance of this multi-user clean lab facility, including:
-	\begin{itemize} 
-	\item Maintenance and operation of mass spectrometers and wet chemistry labs.
-	\item Training and supporting researchers in chemical and mass spectrometric methods.
-	\item Preparation, measurement, and reporting of isotopic analyses of geologic and biomineral material for external contracts.
-	\item Procurement and preparation of lab consumables.
-	\end{itemize}
+\lineitem{Interdisciplinary Earth Data Alliance 2 (IEDA2)}{2023\ongoing}
+\subsubsection*{Community Advisory Board}
+\begin{itemize}
+\item Member of primary community advising body for the NSF-funded \href{https://www.iedadata.org/}{IEDA2} data facility.
+\item Guide approaches to promote and ensure access, preservation, and re-usability of Earth system data.
+\end{itemize}
 
-\subsection*{\textbf{Departmental Service}}
+\lineitem{Departmental Service}{}
 \subsubsection*{Department of Earth Sciences, Dartmouth}
 Postdoc Representative for Faculty Search Committee \hfill 2023
 \begin{itemize}
@@ -36,16 +27,31 @@ Whole Earth Seminar --- Organizer \hfill  Spring 2019
 	\item Contacted and scheduled speakers from diverse disciplines in Earth and planetary sciences.
 \end{itemize}
 
-\subsection*{\textbf{Academic Meetings}}
+\lineitem{Laboratory Research \& Management}{}
+Analytical Experience:
+	\begin{itemize} [label={}]
+		\item \textit{Expert:} TIMS
+		\item \textit{Proficient:} MC-ICP-MS, ICP-MS, SEM-EDS
+		\item \textit{Limited:} ICP-OES, XRF, XRD
+	\end{itemize} 
+\subsubsection*{W.M. Keck Isotope Facility{\normalfont , UCSC \hfill 2016 -- 2021}}
+Under the advisorship of lab director Prof. Terry Blackburn, I was partially responsible for the operation and maintenance of this multi-user clean lab facility, including:
+	\begin{itemize} 
+	\item Maintenance and operation of mass spectrometers and wet chemistry labs.
+	\item Training and supporting researchers in chemical and mass spectrometric methods.
+	\item Preparation, measurement, and reporting of isotopic analyses of geologic and biomineral material for external contracts.
+	\item Procurement and preparation of lab consumables.
+	\end{itemize}
 
+\lineitem{Academic Meetings}{}
 \subsubsection*{American Astronomical Society}
-	\quad Chambliss Award Judge (best student poster presentation) \hfill 2023
+	Chambliss Award Judge (best student poster presentation) \hfill 2023
 
 \subsubsection*{Meteoritical Society Annual Meeting}
-	\quad McKay Award Judge (best student oral presentation) \hfill 2022
+	McKay Award Judge (best student oral presentation) \hfill 2022
 
 \subsubsection*{AGU Fall Meeting}
-	\quad Co-Chair/Co-Convener:~~Applications of Thermochronology to Understand Crustal Systems \hfill 2017
+	Co-Chair/Co-Convener:~~Applications of Thermochronology to Understand Crustal Systems \hfill 2017
 
 \vspace{2ex}
 \begin{hangparas}{5ex}{1}
