--- a/sect/teaching.tex
+++ b/sect/teaching.tex
@@ -5,6 +5,7 @@ Acting leader of a research group (4 graduate, 2 undergraduate students) in the 
 \begin{itemize}
 \item Coordinate and facilitate group meetings.
 \item Provide non-specialist research guidance.
+\item Evaluate progress and assign grades.
 \item Organize/present mini-workshops on research tools and skills.
 \end{itemize}
 \subsubsection*{Guest Lecturer}
