--- a/sect/outreach.tex
+++ b/sect/outreach.tex
@@ -23,7 +23,7 @@
 	\item Teach geoscience concepts and share stories about experiences as a scientist.
 \end{itemize}
 
-\subsection*{\textbf{Geoscientists Encouraging Openness and Diversity in the Earth Sciences\\(GEODES)} \hfill 2019 – 2020}
+\lineitem{Geoscientists Encouraging Openness and Diversity in the Earth Sciences\\(GEODES)}{2019 -- 2020}
 \subsubsection*{Graduate Student Leader}
 \begin{itemize}
 	\item A student-run group in the UCSC Earth \& Planetary Sciences Department.
@@ -31,15 +31,15 @@
 	\item Organized and implemented outreach events centered on promoting underrepresented groups in the geosciences and cultivating a culture of inclusivity within the department.
 \end{itemize}
 
-\subsection*{\textbf{Peary-MacMillan Arctic Museum} \hspace{15pt} Brunswick, ME, U.S.A. \hfill 2012 – 2016}
-\textit{Curatorial Intern}~~(2015 – 2016)
+\subsection*{\textbf{Peary-MacMillan Arctic Museum} \hspace{15pt} Brunswick, ME, U.S.A. \hfill 2012 -- 2016}
+\subsubsection*{Curatorial Intern \qquad {\normalfont 2015 -- 2016}}
 \begin{itemize}
 	\item Developed outreach programming and exhibit content.
 	\item Supplemented undergraduate courses with lectures and discussions drawing on museum collections.
 	\item Mentored and trained undergraduate student interns and employees.
 \end{itemize}
 
-\textit{Student Tour Guide}~~(2012 – 2014)
+\subsubsection*{Student Tour Guide \qquad {\normalfont 2012 -- 2014}}
 \begin{itemize}
 	\item Led museum tours for all age groups of museum exhibits and interactive collections.
 \end{itemize}
