--- a/sect/abstracts.tex
+++ b/sect/abstracts.tex
@@ -1,8 +1,8 @@
 \section*{SELECTED CONFERENCE ABSTRACTS}
 
-\begin{center} 
-A more comprehensive list of abstracts is available on \href{https://scholar.google.com/citations?user=KHLOvgcAAAAJ&hl=en}{Google Scholar}. 
-\end{center}
+
+More comprehensive lists of abstracts are available on the \href{https://ui.adsabs.harvard.edu/public-libraries/-tel6KyoTUeLAGPFsPO0dQ}{Astrophysical Data System} or \href{https://scholar.google.com/citations?user=KHLOvgcAAAAJ&hl=en}{Google Scholar}. 
+
 
 \begin{etaremune} [itemsep=4pt, leftmargin=3ex]
   \item \ghedwards, C.B. Keller,  E.R. Newton, C. Stewart. 2023. [iPoster]: Constraining the timescales of giant planet migration from the meteorite record. \textit{241\textsuperscript{st} American Astronomical Society Meeting}, Seattle, WA, U.S.A.
