--- a/sect/funding.tex
+++ b/sect/funding.tex
@@ -3,7 +3,7 @@
 % Perhaps one day: \begin{tabularx}{\linewidth}{@{}lXr@{}}
 \begin{itemize}[leftmargin=0pt,label={},itemsep=1ex]
 \item National Science Foundation --- Astronomy \&\ Astrophysics Postdoctoral Fellowship \hfill 2021 -- 2024\\
-\href{https://www.nsf.gov/awardsearch/showAward?AWD_ID=2102591&HistoricalAwards=false}{Award \#2102591}
+\href{https://www.nsf.gov/awardsearch/showAward?AWD_ID=2102591}{Award \#2102591}
 \end{itemize}
 
 \subsection*{\textbf{Prior~/~Inactive}}
