--- a/sect/outreach.tex
+++ b/sect/outreach.tex
@@ -3,7 +3,7 @@
 \subsection*{\textbf{Montshire Museum of Science} \hfill 2022\ongoing}
 \subsubsection*{Guest Scientist}
 \begin{itemize}
-\item Lead and assist in educational activities within the museum.
+\item Lead and assist educational activities within the museum.
 \item Explain Earth and space science concepts to pre-K through adult audiences.
 \item Develop programming focused on planetary science topics.
 \end{itemize}
