--- a/sect/teaching.tex
+++ b/sect/teaching.tex
@@ -1,6 +1,11 @@
 \section*{TEACHING \&\ MENTORING}
-\subsection*{\textbf{Dartmouth College}}
-\subsubsection*{Research Group Leader (Nov. 2022\ongoing)}
+\lineitem{Dartmouth College}{}
+\subsubsection*{Guest Lecturer}
+\begin{tabular}{p{.15\linewidth} p{.85\linewidth}} %p columns set fixed width and allow text wrapping
+Spring 2022 & Igneous and Metamorphic Petrology
+\end{tabular}
+
+\subsubsection*{Research Group Leader \qquad {\normalfont Nov. 2022\ongoing}}
 Acting leader of a research group (4 graduate, 2 undergraduate students) in the Department of Physics \& Astronomy while the Primary Investigator is on leave. Responsibilities include:
 \begin{itemize}
 \item Coordinate and facilitate group meetings.
@@ -8,10 +13,6 @@ Acting leader of a research group (4 graduate, 2 undergraduate students) in the 
 \item Evaluate progress and assign grades.
 \item Organize/present mini-workshops on research tools and skills.
 \end{itemize}
-\subsubsection*{Guest Lecturer}
-\begin{tabular}{p{.15\linewidth} p{.85\linewidth}} %p columns set fixed width and allow text wrapping
-Spring 2022 & Igneous and Metamorphic Petrology
-\end{tabular}
 
 \subsubsection*{Mentored Undergraduate Researchers}
 \begin{itemize}
