--- a/sect/epilogue.tex
+++ b/sect/epilogue.tex
@@ -1,9 +1,10 @@
 \subsection*{\textbf{Additional Work Experience}}
 
 \begin{itemize}[label={}]
-	\item Server and Bartender --- Trio Restaurant, Fish Creek, WI, U.S.A. --- 2014.
 	\item Wildland Firefighter (Type 2) --- U.S. Forest Service, Winthrop, WA, U.S.A. --- 2015.
+	\item Server and Bartender --- Trio Restaurant, Fish Creek, WI, U.S.A. --- 2014.
 \end{itemize}
 
-\subsection*{\textbf{Non-Academic Interests}} \hspace{5ex}
+\subsection*{\textbf{Non-Academic Interests}}
+	\hspace{5ex}
  	Bicycling, cross-country skiing, birdwatching, breadmaking, classical history and literature.
