reformat mentorships, May updates

--- a/sect/epilogue.tex
+++ b/sect/epilogue.tex
@@ -2,7 +2,7 @@
 
 \begin{itemize}[label={}]
 	\item Wildland Firefighter (Type 2) --- U.S. Forest Service, Winthrop, WA, U.S.A. --- 2015.
-	\item Server and Bartender --- Trio Restaurant, Fish Creek, WI, U.S.A. --- 2014.
+	\item Server \& Bartender --- Trio Restaurant, Fish Creek, WI, U.S.A. --- 2014.
 \end{itemize}
 
 \subsection*{\textbf{Non-Academic Interests}}
