--- a/sect/service.tex
+++ b/sect/service.tex
@@ -1,10 +1,10 @@
 \section*{ACADEMIC SERVICE \& EXPERIENCE}
 
-\lineitem{Interdisciplinary Earth Data Alliance 2 (IEDA2)}{2023\ongoing}
-\subsubsection*{Community Advisory Board}
+\lineitem{Interdisciplinary Earth Data Alliance 2 (IEDA\textsuperscript{2})}{2023\ongoing}
+\subsubsection*{Community Advisory Board, \normalfont Co-Chair}
 \begin{itemize}
-\item Member of primary community advising body for the NSF-funded \href{https://www.iedadata.org/}{IEDA2} data facility.
-\item Guide approaches to promote and ensure access, preservation, and re-usability of Earth system data.
+	\item Co-chair of primary community advising body for the NSF-funded \href{https://www.iedadata.org/}{IEDA$^2$} data facility.
+	\item Guide approaches to promote and ensure access, preservation, and re-usability of Earth system data.
 \end{itemize}
 
 \lineitem{Departmental Service}{}
