--- a/sect/teaching.tex
+++ b/sect/teaching.tex
@@ -5,8 +5,8 @@
 Spring 2022 & Igneous and Metamorphic Petrology
 \end{tabular}
 
-\subsubsection*{Research Group Leader \qquad {\normalfont Nov. 2022\ongoing}}
-Acting leader of a research group (4 graduate, 2 undergraduate students) in the Department of Physics \& Astronomy while the Primary Investigator is on leave. Responsibilities include:
+\subsubsection*{Research Group Leader \qquad {\normalfont 2022--23}}
+Acting leader of a research group (4 graduate, 2 undergraduate students) in the Department of Physics \& Astronomy while the Primary Investigator was on leave. Responsibilities included:
 \begin{itemize}
 \item Coordinate and facilitate group meetings.
 \item Provide non-specialist research guidance.
@@ -14,12 +14,16 @@ Acting leader of a research group (4 graduate, 2 undergraduate students) in the 
 \item Organize/present mini-workshops on research tools and skills.
 \end{itemize}
 
+\subsubsection*{Mentored Graduate Researchers}
+\begin{tabular}{ll}
+	2022\ongoing & Rayna Rampalli (PhD student)\\
+\end{tabular}
 \subsubsection*{Mentored Undergraduate Researchers}
-\begin{itemize}
-	\item Jack Duranceau (2023), thesis (\textit{in prep})
-	\item Chase Alvarado-Anderson (2023), thesis (\textit{in prep})
-	\item Cameron Stewart (2022)
-\end{itemize}
+\begin{tabular}{ll}
+	2023 & Jack Duranceau (thesis 2023)\\
+	2023 & Chase Alvarado-Anderson (thesis 2023)\\
+	2022 & Cameron Stewart \\
+\end{tabular}
 
 \subsection*{\textbf{University of California Santa Cruz}}
 \subsubsection*{Graduate Teaching Assistant} 
@@ -32,14 +36,14 @@ Acting leader of a research group (4 graduate, 2 undergraduate students) in the 
 \end{tabular}
 
 \subsubsection*{Mentored Undergraduate Researchers}
-\begin{itemize}
-	\item Cosmo Varah-Sikes (2019-2021), thesis (2021)
-	\item Linh Phan (2020)
-	\item Michael Scudder (2018-2020), thesis (2020)
-	\item Alexander Levinson (2018)
-	\item Frances O'Byrne (2018)
-	\item Paul Colosi (2017-2018)
-\end{itemize}
+\begin{tabular}{ll}
+	2019--21 & Cosmo Varah-Sikes (thesis 2021)\\
+	2020 & Linh Phan \\
+	2018--20 & Michael Scudder (thesis 2020) \\
+	2018 & Alexander Levinson \\
+	2018 & Frances O'Byrne \\
+	2017--18 & Paul Colosi
+\end{tabular}
 
 \subsection*{\textbf{Bowdoin College} \hspace{15pt} Brunswick, ME, U.S.A.}
 \subsubsection*{Laboratory Teaching Assistant}
