--- a/sect/outreach.tex
+++ b/sect/outreach.tex
@@ -32,14 +32,14 @@
 \end{itemize}
 
 \subsection*{\textbf{Peary-MacMillan Arctic Museum} \hspace{15pt} Brunswick, ME, U.S.A. \hfill 2012 -- 2016}
-\subsubsection*{Curatorial Intern \qquad {\normalfont 2015 -- 2016}}
+\subsubsection*{Curatorial Intern \qquad {\normalfont 2015--16}}
 \begin{itemize}
 	\item Developed outreach programming and exhibit content.
 	\item Supplemented undergraduate courses with lectures and discussions drawing on museum collections.
 	\item Mentored and trained undergraduate student interns and employees.
 \end{itemize}
 
-\subsubsection*{Student Tour Guide \qquad {\normalfont 2012 -- 2014}}
+\subsubsection*{Student Tour Guide \qquad {\normalfont 2012--14}}
 \begin{itemize}
 	\item Led museum tours for all age groups of museum exhibits and interactive collections.
 \end{itemize}
