--- a/sect/talks.tex
+++ b/sect/talks.tex
@@ -1,20 +1,15 @@
+%%%%%%%%
+\newcommand{\invitedtalk}[3]{\textbf{#1} $|$ {#2} \\ Title:~\textit{#3}}
+%%%%%%%%
 \section*{INVITED TALKS}
 
-\begin{etaremune} [itemsep=4pt, leftmargin=3ex]
-  \item \textbf{Colby College} $|$ Geology Seminar, 17 Mar 2023.\\
-  Title:~\textit{In the light of a newborn sun: transcribing the first chapters of our solar system from meteorites}
-  \item \textbf{Thayer School of Engineering, Dartmouth College} $|$ Ice+Climate Seminar Series, 10 Feb 2023. \\
-  Title:~\textit{A terrestrial record of Heinrich events}
-   \item \textbf{Carnegie Institution for Science} $|$
-   Astronomy Seminar Series, 28 Oct 2022. \\
-  Title:~\textit{Reconstructing asteroid assembly from the thermal records of chondrites}
+\begin{etaremune} [itemsep=4pt, leftmargin=3ex,]
 
-   \item \textbf{Massachusetts Institute of Technology} $|$
-   Planetary Lunch Seminar, 3 May 2022. \\
-  Title:~\textit{The early history of the LL chondrite parent planetesimal}
-
-  \item \textbf{Princeton University} $|$ 
-  Environmental Geology and Geochemistry Seminar, 31 Mar 2022. \\
-  Title:~\textit{Peering beneath the northern Laurentide ice sheet during the last glacial maximum}
+  \item \invitedtalk{Center for Astrophysics $|$ Harvard \& Smithsonian }{Astrophysics Data System, 13 June 2023}{Transcribing the cosmochemical codex}
+  \item \invitedtalk{Colby College}{Geology Seminar, 17 Mar 2023}{In the light of a newborn sun: transcribing the first chapters of our solar system from meteorites}
+  \item \invitedtalk{Thayer School of Engineering, Dartmouth College}{Ice+Climate Seminar Series, 10 Feb 2023}{A terrestrial record of Heinrich events}
+  \item \invitedtalk{Carnegie Institution for Science}{Astronomy Seminar Series, 28 Oct 2022}{Reconstructing asteroid assembly from the thermal records of chondrites}
+  \item \invitedtalk{Massachusetts Institute of Technology}{Planetary Lunch Seminar, 3 May 2022}{The early history of the LL chondrite parent planetesimal}
+  \item \invitedtalk{Princeton University}{Environmental Geology and Geochemistry Seminar, 31 Mar 2022}{Peering beneath the northern Laurentide ice sheet during the last glacial maximum}
   
 \end{etaremune}
