remove fancy header

--- a/sect/pubs.tex
+++ b/sect/pubs.tex
@@ -1,4 +1,4 @@
-\section{PUBLICATIONS}
+\section*{PUBLICATIONS}
 \hfill* denotes student author
 \newcommand{\inprep}[1]{\textit{in prep, #1}}
 \begin{etaremune} [itemsep=4pt, leftmargin=3ex]
