--- a/Edwards_CV.tex
+++ b/Edwards_CV.tex
@@ -24,8 +24,9 @@
 \usepackage{fancyhdr} \usepackage{lastpage}
     \renewcommand{\headrulewidth}{0pt}
     \cfoot{G.H. Edwards \hspace{8pt}  \thepage \hspace{1pt} / \pageref*{LastPage}}
-    \pagestyle{fancy}
-
+    \fancyhead{} %remove headers
+	\pagestyle{fancy}
+	
 \usepackage{titlesec} % format sections 
 	\titleformat*{\section}{\centering\bfseries}
 	\titleformat{\section}{\centering\bfseries}{}{0pt}{}
