--- a/sect/appointments.tex
+++ b/sect/appointments.tex
@@ -1,7 +1,7 @@
 \section*{CURRENT APPOINTMENT}
-\subsection*{\textbf{Dartmouth College} \hfill 2021\ongoing}
-\textit{NSF Astronomy \&\ Astrophysics Postdoctoral Fellow}
-\begin{itemize}
-	\item[] ``Planetesimal formation, giant planet migration, and stellar accretion in our solar system and beyond"
-	\item[] Advisors: Profs. C. Brenhin Keller (Earth Sciences) \&\ Elisabeth R. Newton (Physics \&\ Astronomy)
-\end{itemize}
+\lineitem[2021\ongoing]{Dartmouth College}
+\subline{NSF Astronomy \&\ Astrophysics Postdoctoral Fellow}
+
+``Planetesimal formation, giant planet migration, and stellar accretion in our solar system and beyond"
+
+~Advisors: Profs. C. Brenhin Keller (Earth Sciences) \&\ Elisabeth R. Newton (Physics \&\ Astronomy)
