--- a/sect/education.tex
+++ b/sect/education.tex
@@ -1,10 +1,11 @@
 \section*{EDUCATION}
 
-\subsection*{\textbf{University of California Santa Cruz} \hfill 2021}
-\textit{PhD}: Earth Sciences\\
-\textit{Dissertation Title}: Applications of the uranium decay systems in deep time and the Quaternary: chronologic insights within planetary interiors and beneath glaciers [\href{https://escholarship.org/uc/item/0vp7r59z}{PDF}]\\
-\textit{Committee}: Profs. Terrence Blackburn (Chair), Slawek Tulaczyk, Myriam Telus.
+\lineitem[2021]{\textbf{University of California Santa Cruz}}
+\subline{PhD in Earth Sciences:}
+Applications of the uranium decay systems in deep time and the Quaternary: chronologic insights within planetary interiors and beneath glaciers [\href{https://escholarship.org/uc/item/0vp7r59z}{PDF}]
 
-\subsection*{\textbf{Bowdoin College} \hspace{15pt} Brunswick, ME \hfill 2014}
-\textit{Bachelor of Arts}: Earth and Oceanographic Science with Honors, Classics (minor) \\
-\textit{Summa cum Laude}, $\Phi$BK Society
+\quad Committee: Profs. Terrence Blackburn (Chair), Slawek Tulaczyk, Myriam Telus.
+
+\lineitem[(Brunswick, ME) \hspace{9cm} 2014]{Bowdoin College}
+\subline{Bachelor of Arts:}
+Earth and Oceanographic Science with Honors, minor in Classics (\emph{Summa cum Laude}, $\Phi$BK Society)
