--- a/sect/epilogue.tex
+++ b/sect/epilogue.tex
@@ -1,10 +1,8 @@
-\subsection*{\textbf{Additional Work Experience}}
+\lineitem{Additional Work Experience}
+Wildland Firefighter (Type 2) --- U.S. Forest Service, Winthrop, WA, U.S.A. --- 2015.
 
-\begin{itemize}[label={}]
-	\item Wildland Firefighter (Type 2) --- U.S. Forest Service, Winthrop, WA, U.S.A. --- 2015.
-	\item Server \& Bartender --- Trio Restaurant, Fish Creek, WI, U.S.A. --- 2014.
-\end{itemize}
+Server \& Bartender --- Trio Restaurant, Fish Creek, WI, U.S.A. --- 2014.
 
-\subsection*{\textbf{Non-Academic Interests}}
-	\hspace{5ex}
+
+\lineitem{\textbf{Non-Academic Interests}}
  	Bicycling, cross-country skiing, birdwatching, breadmaking, classical history and literature.
