--- a/sect/funding.tex
+++ b/sect/funding.tex
@@ -1,15 +1,14 @@
 \section*{FUNDING}
-\subsection*{\textbf{Current~/~Active}}
-% Perhaps one day: \begin{tabularx}{\linewidth}{@{}lXr@{}}
-\begin{itemize}[leftmargin=0pt,label={},itemsep=1ex]
-\item National Science Foundation --- Astronomy \&\ Astrophysics Postdoctoral Fellowship \hfill 2021 -- 2024\\
-\href{https://www.nsf.gov/awardsearch/showAward?AWD_ID=2102591}{Award \#2102591}
-\end{itemize}
+\lineitem{Current~/~Active}
+\begin{tabular}{@{}p{.1\linewidth} @{}p{.9\linewidth}} 
+2021--24 & National Science Foundation --- Astronomy \&\ Astrophysics Postdoctoral Fellowship\\
+& \href{https://www.nsf.gov/awardsearch/showAward?AWD_ID=2102591}{Award \#2102591}
+\end{tabular}
 
-\subsection*{\textbf{Prior~/~Inactive}}
-\begin{itemize} [leftmargin=0pt,label={},itemsep=1ex]
-\item ARCS Foundation --- Scholar Award (Fellowship) \hfill 2020 -- 2021
-\item University of California Santa Cruz  --- Regent’s Fellowship \hfill 2016 – 2017
-\item Bowdoin College --- Grua/O’Connell Research Award  \hfill 2013
-\item Bowdoin College --- Freedman Summer Research Fellowship in Coastal/Environmental Studies \hfill 2012
-\end{itemize}
+\lineitem{Prior~/~Inactive}
+\begin{tabular}{@{}p{.1\linewidth} @{}p{.9\linewidth}} 
+    2020--21 & ARCS Foundation --- Scholar Award (Fellowship) \\
+2016--17 & University of California Santa Cruz  --- Regent's Fellowship \\
+2013 & Bowdoin College --- Grua/O'Connell Research Award  \\ 
+2012 & Bowdoin College --- Freedman Research Fellowship in Coastal/Environmental Studies \\
+\end{tabular}
