--- a/sect/outreach.tex
+++ b/sect/outreach.tex
@@ -1,7 +1,7 @@
 \section*{OUTREACH \& PUBLIC SERVICE}
 
 \subsection*{\textbf{Montshire Museum of Science} \hfill 2022\ongoing}
-\subsubsection*{Guest Scientist}
+\subline{Guest Scientist}
 \begin{itemize}
 \item Lead and assist educational activities within the museum.
 \item Explain Earth and space science concepts to pre-K through adult audiences.
@@ -9,7 +9,7 @@
 \end{itemize}
 
 \subsection*{\textbf{Santa Cruz Museum of Natural History} \hfill 2018 – 2022}
-\subsubsection*{Volunteer Scientist}
+\subline{Volunteer Scientist}
 \begin{itemize}
 	\item Created educational content and hosted activities at monthly museum events.
 	\item Co-hosted monthly educational video streams covering geoscience topics. \\
@@ -17,14 +17,14 @@
 \end{itemize}
 
 \subsection*{\textbf{Skype a Scientist} \hfill 2019\ongoing}
-\subsubsection*{Volunteer Scientist}
+\subline{Volunteer Scientist}
 \begin{itemize}
 	\item Prepare educational content and host video calls with elementary and secondary school classrooms.
 	\item Teach geoscience concepts and share stories about experiences as a scientist.
 \end{itemize}
 
-\lineitem{Geoscientists Encouraging Openness and Diversity in the Earth Sciences\\(GEODES)}{2019 -- 2020}
-\subsubsection*{Graduate Student Leader}
+\lineitem[2019 -- 2020]{Geoscientists Encouraging Openness and Diversity in the Earth Sciences\\(GEODES)}
+\subline{Graduate Student Leader}
 \begin{itemize}
 	\item A student-run group in the UCSC Earth \& Planetary Sciences Department.
 	\item One of six graduate student leaders responsible for the operation and development of GEODES.
@@ -32,14 +32,14 @@
 \end{itemize}
 
 \subsection*{\textbf{Peary-MacMillan Arctic Museum} \hspace{15pt} Brunswick, ME, U.S.A. \hfill 2012 -- 2016}
-\subsubsection*{Curatorial Intern \qquad {\normalfont 2015--16}}
+\subline[2015 -- 2016]{Curatorial Intern}
 \begin{itemize}
 	\item Developed outreach programming and exhibit content.
 	\item Supplemented undergraduate courses with lectures and discussions drawing on museum collections.
 	\item Mentored and trained undergraduate student interns and employees.
 \end{itemize}
 
-\subsubsection*{Student Tour Guide \qquad {\normalfont 2012--14}}
+\subline[2012 -- 2014]{Student Tour Guide}
 \begin{itemize}
 	\item Led museum tours for all age groups of museum exhibits and interactive collections.
 \end{itemize}
