--- a/sect/service.tex
+++ b/sect/service.tex
@@ -1,14 +1,14 @@
 \section*{ACADEMIC SERVICE \& EXPERIENCE}
 
-\lineitem{Interdisciplinary Earth Data Alliance 2 (IEDA\textsuperscript{2})}{2023\ongoing}
-\subsubsection*{Community Advisory Board, \normalfont Co-Chair}
+\lineitem[2023\ongoing]{Interdisciplinary Earth Data Alliance 2 (IEDA\textsuperscript{2})}
+\subline{Community Advisory Board, \normalfont Co-Chair}
 \begin{itemize}
 	\item Co-chair of primary community advising body for the NSF-funded \href{https://www.iedadata.org/}{IEDA$^2$} data facility.
 	\item Guide approaches to promote and ensure access, preservation, and re-usability of Earth system data.
 \end{itemize}
 
-\lineitem{Departmental Service}{}
-\subsubsection*{Department of Earth Sciences, Dartmouth}
+\lineitem{Departmental Service}
+\subline{Department of Earth Sciences, Dartmouth}
 Postdoc Representative for Faculty Search Committee \hfill 2023
 \begin{itemize}
 	\item Organized meetings with candidates and departmental postdocs.
@@ -20,21 +20,21 @@ Earth \& Planetary History Journal Club --- Organizer 	 \hfill	Spring 2022
 	\item Scheduled, coordinated, and oversaw multidisciplinary reading group.
 \end{itemize}
 
-\subsubsection*{Department of Earth \& Planetary Sciences, UCSC}
+\subline{Department of Earth \& Planetary Sciences, UCSC}
 Whole Earth Seminar --- Organizer \hfill  Spring 2019
 \begin{itemize}
 	\item Coordinated departmental seminar series (one of two graduate student organizers)
 	\item Contacted and scheduled speakers from diverse disciplines in Earth and planetary sciences.
 \end{itemize}
 
-\lineitem{Laboratory Research \& Management}{}
+\lineitem{Laboratory Research \& Management}
 Analytical Experience:
 	\begin{itemize} [label={}]
 		\item \textit{Expert:} TIMS
 		\item \textit{Proficient:} MC-ICP-MS, ICP-MS, SEM-EDS
 		\item \textit{Limited:} ICP-OES, XRF, XRD
 	\end{itemize} 
-\subsubsection*{W.M. Keck Isotope Facility{\normalfont , UCSC \hfill 2016 -- 2021}}
+\subline[\hfill 2016 -- 2021]{W.M. Keck Isotope Facility, UC Santa Cruz}
 Under the advisorship of lab director Prof. Terry Blackburn, I was partially responsible for the operation and maintenance of this multi-user clean lab facility, including:
 	\begin{itemize} 
 	\item Maintenance and operation of mass spectrometers and wet chemistry labs.
@@ -43,15 +43,21 @@ Under the advisorship of lab director Prof. Terry Blackburn, I was partially res
 	\item Procurement and preparation of lab consumables.
 	\end{itemize}
 
-\lineitem{Academic Meetings}{}
-\subsubsection*{American Astronomical Society}
-	Chambliss Award Judge (best student poster presentation) \hfill 2023
+\lineitem{Academic Meetings}
+\subline{American Astronomical Society}
+\begin{tabular}{ll} 
+	2023 & Chambliss Award Judge (best student poster presentation)
+\end{tabular}
 
-\subsubsection*{Meteoritical Society Annual Meeting}
-	McKay Award Judge (best student oral presentation) \hfill 2022
+\subline{Meteoritical Society Annual Meeting}
+\begin{tabular}{ll} 
+	2022 & 	McKay Award Judge (best student oral presentation)
+\end{tabular}
 
-\subsubsection*{AGU Fall Meeting}
-	Co-Chair/Co-Convener:~~Applications of Thermochronology to Understand Crustal Systems \hfill 2017
+\subline{AGU Fall Meeting}
+\begin{tabular}{ll} 
+	2017 & 	Co-Chair/Co-Convener:~~Applications of Thermochronology to Understand Crustal Systems
+\end{tabular}
 
 \vspace{2ex}
 \begin{hangparas}{5ex}{1}
