--- a/sect/teaching.tex
+++ b/sect/teaching.tex
@@ -1,11 +1,11 @@
 \section*{TEACHING \&\ MENTORING}
-\lineitem{Dartmouth College}{}
-\subsubsection*{Guest Lecturer}
+\lineitem{Dartmouth College}
+\subline{Guest Lecturer}
 \begin{tabular}{p{.15\linewidth} p{.85\linewidth}} %p columns set fixed width and allow text wrapping
 Spring 2022 & Igneous and Metamorphic Petrology
 \end{tabular}
 
-\subsubsection*{Research Group Leader \qquad {\normalfont 2022--23}}
+\subline[2022 -- 2023]{Research Group Leader}
 Acting leader of a research group (4 graduate, 2 undergraduate students) in the Department of Physics \& Astronomy while the Primary Investigator was on leave. Responsibilities included:
 \begin{itemize}
 \item Coordinate and facilitate group meetings.
@@ -14,19 +14,19 @@ Acting leader of a research group (4 graduate, 2 undergraduate students) in the 
 \item Organize/present mini-workshops on research tools and skills.
 \end{itemize}
 
-\subsubsection*{Mentored Graduate Researchers}
+\subline{Mentored Graduate Researchers}
 \begin{tabular}{ll}
 	2022\ongoing & Rayna Rampalli (PhD student)\\
 \end{tabular}
-\subsubsection*{Mentored Undergraduate Researchers}
+\subline{Mentored Undergraduate Researchers}
 \begin{tabular}{ll}
 	2023 & Jack Duranceau (thesis 2023)\\
 	2023 & Chase Alvarado-Anderson (thesis 2023)\\
 	2022 & Cameron Stewart \\
 \end{tabular}
 
-\subsection*{\textbf{University of California Santa Cruz}}
-\subsubsection*{Graduate Teaching Assistant} 
+\lineitem{University of California Santa Cruz}
+\subline{Graduate Teaching Assistant}
 \begin{tabular}{p{.15\linewidth} p{.85\linewidth}} %p columns set fixed width and allow text wrapping
 	Spring 2021 & \textit{Measuring Earth’s 4.5 Billion-Year History} (radiogenic and stable isotope geochemistry)\\
 	Fall 2020 & \textit{Evolution of Earth} (Earth history overview) \\
@@ -35,7 +35,7 @@ Acting leader of a research group (4 graduate, 2 undergraduate students) in the 
 	Winter 2018 & \textit{Geologic Principles} (introductory Earth science)
 \end{tabular}
 
-\subsubsection*{Mentored Undergraduate Researchers}
+\subline{Mentored Undergraduate Researchers}
 \begin{tabular}{ll}
 	2019--21 & Cosmo Varah-Sikes (thesis 2021)\\
 	2020 & Linh Phan \\
@@ -46,7 +46,7 @@ Acting leader of a research group (4 graduate, 2 undergraduate students) in the 
 \end{tabular}
 
 \subsection*{\textbf{Bowdoin College} \hspace{15pt} Brunswick, ME, U.S.A.}
-\subsubsection*{Laboratory Teaching Assistant}
+\subline{Laboratory Teaching Assistant}
 \begin{tabular}{p{.15\linewidth} p{.85\linewidth}} %p columns set fixed width and allow text wrapping
 Fall 2012, 2013 & \textit{Investigating Earth}\\
 Fall 2013 & \textit{Marine Biogeochemistry}
