--- a/sect/abstracts.tex
+++ b/sect/abstracts.tex
@@ -1,13 +1,12 @@
-\section*{SELECTED CONFERENCE ABSTRACTS}
+\section*{10 SELECTED CONFERENCE ABSTRACTS}
 
-
-More comprehensive lists of abstracts are available on the \href{https://ui.adsabs.harvard.edu/public-libraries/-tel6KyoTUeLAGPFsPO0dQ}{Astrophysical Data System} or \href{https://scholar.google.com/citations?user=KHLOvgcAAAAJ&hl=en}{Google Scholar}. 
-
+More comprehensive lists of abstracts are available on the \href{https://ui.adsabs.harvard.edu/public-libraries/-tel6KyoTUeLAGPFsPO0dQ}{Astrophysical Data System} or \href{https://scholar.google.com/citations?user=KHLOvgcAAAAJ&hl=en}{Google Scholar}.
 
 \begin{etaremune} [itemsep=4pt, leftmargin=3ex]
-  \item \ghedwards, C.B. Keller,  E.R. Newton, C. Stewart. 2023. [iPoster]: Constraining the timescales of giant planet migration from the meteorite record. \textit{241\textsuperscript{st} American Astronomical Society Meeting}, Seattle, WA, U.S.A.
   
-  \item \ghedwards, C.B. Keller, C. Stewart, E.R. Newton. 2022. [Poster]: A Bayesian framework for exploring the early impact history of the asteroid belt with meteorite thermochronology. \textit{85\textsuperscript{th} Annual Meeting of the Meteoritical Society}, Glasgow, Scotland. 
+  \item \ghedwards, C.B. Keller, E.R. Newton, C. Stewart. 2023. [Talk]: Disk-driven migration of Jupiter: support from meteorite thermochronology. \textit{Goldschmidt Conference}, Lyon, FR. 
+  
+  \item \ghedwards, C.B. Keller,  E.R. Newton, C. Stewart. 2023. [iPoster]: Constraining the timescales of giant planet migration from the meteorite record. \textit{241\textsuperscript{st} American Astronomical Society Meeting}, Seattle, WA, U.S.A.
  
   \item \ghedwards, G. Piccione, M. Gomez. 2022. [Poster]: Comparing in-person and virtual modes of a 4-year museum-based geoscience outreach program. \textit{Earth Educators' Rendezvous 2022}, Minneapolis, MN, U.S.A.
   
@@ -15,7 +14,7 @@ More comprehensive lists of abstracts are available on the \href{https://ui.adsa
   
   \item C.T. Varah-Sikes, \ghedwards, T. Blackburn. 2020. [Poster]: Thermal histories in Type 7 ordinary chondrites: interpreting residence in parent body using petrologic observation and Pb-Pb phosphate thermochronology. \textit{Geological Society of America Annual Scientific Meeting}, Virtual.
   
-  \item  \ghedwards, T. Blackburn, S. Tulaczyk, G.G. Piccione. 2019. [Poster]: U-Series isotopics constrain timescale of bedrock comminution and glacial incision in Taylor Valley, Antarctica. \textit{Goldschmidt Annual Meeting}, Barcelona, ES.
+  \item  \ghedwards, T. Blackburn, S. Tulaczyk, G.G. Piccione. 2019. [Poster]: U-Series isotopics constrain timescale of bedrock comminution and glacial incision in Taylor Valley, Antarctica. \textit{Goldschmidt Conference}, Barcelona, ES.
   
 	\item  \ghedwards, T. Blackburn, G.G. Piccione. 2018. [Talk]: Cooling and disruption of the LL chondrite parent body. \textit{Lunar and Small Bodies Graduate Forum (LunGradCon)}, Mountain View, CA, U.S.A.
 	
