--- a/sect/awards.tex
+++ b/sect/awards.tex
@@ -1,11 +1,8 @@
 \section*{AWARDS \& HONORS}
 
-\begin{itemize} [leftmargin=0pt,label={},itemsep=1ex]
-	\item UCSC Earth \& Planetary Sciences Outstanding TA Award (Honorable Mention) \hfill 2020
-	\item Aaron and Elizabeth Waters Award  \hfill 2019
-	\begin{itemize} [label={}, rightmargin=30ex]
-	\item \textit{Issued annually for the most outstanding proposal for PhD research in the UCSC Department of Earth \& Planetary Sciences}
-	\end{itemize}
-	\item National Association of Geoscience Teachers Outstanding TA Award \hfill 2014
-%	\item Sarah and James Bowdoin Scholar (Dean’s List) \hfill 2011 – 2013
-\end{itemize}
+\begin{tabular}{@{}p{.1\linewidth} @{}p{.9\linewidth}} 
+	2020 & UCSC Earth \& Planetary Sciences Outstanding TA Award (Honorable Mention) \\
+	2019 & Aaron and Elizabeth Waters Award ---  \textit{Issued annually for the most outstanding proposal for PhD research in the UCSC Department of Earth \& Planetary Sciences} \\
+	2014 & National Association of Geoscience Teachers Outstanding TA Award \\
+	2011--13 & Sarah and James Bowdoin Scholar (Dean's List) \\
+\end{tabular}
